# Copyright (C) 2026-2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../../../accessibility_manager_service.gni")

module_output_path = "accessibility/accessibility"

###############################################################################
config("module_private_config") {
  visibility = [ ":*" ]
  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  include_dirs = [
    "../inc",
    "../../../common/log/include",
    "../../../interfaces/innerkits/common/include",
  ]

  defines = [
    "AAMS_LOG_TAG = \"accessibility_test\"",
    "AAMS_LOG_DOMAIN = 0xD001D05",
  ]

  defines += accessibility_default_defines
}

test_external_deps = [
  "c_utils:utils",
  "ffrt:libffrt",
  "googletest:gtest_main",
  "hilog:libhilog",
  "ipc:ipc_single",
]

if (accessibility_camera_support) {
  test_external_deps += [ "camera_framework:camera_framework" ]
}

if (accessibility_screenlock_manager) {
  test_external_deps += [ "screenlock_mgr:screenlock_client" ]
}

if (accessibility_sensor_support) {
  test_external_deps += [ "sensor:sensor_interface_native" ]
}

if (accessibility_feature_display_manager) {
  test_external_deps += [ "display_manager:displaymgr" ]
}

if (accessibility_feature_power_manager) {
  test_external_deps += [ "power_manager:powermgr_client" ]
}

################################################################################
ohos_unittest("blinking_reminder_test") {
  module_out_path = module_output_path

  sources = [
    "../src/accessible_blinking_reminder_manager.cpp",
    "../src/export_api.cpp",
    "unittest/blinking_reminder_test.cpp",
  ]

  configs = [
    ":module_private_config",
    "../../../resources/config/build:coverage_flags",
  ]

  deps = [
    "../../../interfaces/innerkits/common:accessibility_common",
  ]

  external_deps = test_external_deps
}

################################################################################
group("unittest") {
  testonly = true
  deps = []
  deps += [ ":blinking_reminder_test" ]
}
